<resources>
    <string name="app_name">Tourister</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">252574878423296</string>
    <string name="fb_login_protocol_scheme">fb252574878423296</string>
    <string name="firebase_url">https://tourister.firebaseio.com/</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="info_button_description">Show photo information</string>
    <string name="star_button_description">Fave this photo</string>
    <string name="photo_description">Photo</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="reviews">" Reviews"</string>
    <string name="log_out">Log Out</string>
    <string name="art_and_museums">Art and Museums</string>
    <string name="foods_drinks_and_fun">Foods,Drinks and Fun</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="historic_places_and_events">Historic places and Events</string>
    <string name="architecture">Architecture</string>

</resources>
