<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:io="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity"

    android:id="@+id/content"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:transitionName="photo_hero"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:tint="@color/photo_tint"
                android:scaleType="centerCrop"

                android:contentDescription="@string/photo_description" />

            <ImageButton
                android:id="@+id/info"
                android:layout_width="@dimen/floating_button_size"
                android:layout_height="@dimen/floating_button_size"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.0"
                android:background="@drawable/info_background"
                android:src="@drawable/ic_info"
                android:elevation="@dimen/button_elevation"
                android:stateListAnimator="@drawable/button_raise"
                android:contentDescription="@string/info_button_description" />

            <ImageButton
                android:id="@+id/star"
                android:layout_width="@dimen/floating_button_size"
                android:layout_height="@dimen/floating_button_size"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:alpha="0.0"
                android:background="@drawable/info_background"
                android:src="@drawable/ic_star"
                android:elevation="4dp"
                android:stateListAnimator="@drawable/button_raise"
                android:contentDescription="@string/star_button_description" />

            <FrameLayout
                android:id="@+id/information_container"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="invisible">

                <fragment
                    android:id="@+id/map"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:name="com.google.android.gms.maps.MapFragment"

                    tools:ignore="MissingPrefix"
                    map:uiRotateGestures="false"
                    map:uiScrollGestures="false"
                    map:uiTiltGestures="false"
                    map:uiZoomControls="false"
                    map:uiZoomGestures="false" />

            </FrameLayout>

            <com.example.user.tourister.AnimatedPathView
                android:id="@+id/star_container"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:visibility="invisible"

                io:phase="1.0"
                io:duration="1000"
                io:fillDuration="500"
                io:fillOffset="400"
                io:strokeWidth="6dp"
                io:strokeColor="#ffffffff"
                io:fillColor="#ffffffff"
                io:svgPath="@raw/star" />

        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:textSize="40sp"
            android:fontFamily="sans-serif-light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/placeratingbar"
                android:layout_marginLeft="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rating="4.5"
                style="?android:attr/ratingBarStyleSmall" />

            <TextView
                android:id="@+id/placeratingcount"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="69 reviews"
                android:layout_gravity="center_vertical"
                android:textSize="15dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/placetype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:text="Park"
            android:background="@drawable/round"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"/>


        <TextView
            android:drawableLeft="@drawable/access_time_icon"
            android:id="@+id/placeacesstime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Open now"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp" />


        <TextView
            android:drawableLeft="@drawable/location_icon"
            android:id="@+id/placeaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123 street , syracuse, Ny ,13210"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="100dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/placewebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/browser_icon"
            android:text=" https:\\Website"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="100dp"
            android:textSize="20dp"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/placephone"
            android:drawableLeft="@drawable/call_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" +1 315 213 4251"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:drawablePadding="5dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginTop="20dp" />


    </LinearLayout>

</ScrollView>
